12-ai/litellm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm
  namespace: ai
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`llm.apps.house.simonellistonball.com`)
      services:
        - name: litellm
          port: 4000
  tls:
    secretName: ai-tls
